@@ -38,3 +38,4 @@ third-party/zlib/zlib.pc
 pip-log.txt
 sphinx-contrib
 compile_commands.json
+.DS_Store
